// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fab component rendering it should render all colors: Color light Fab 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root makeStyles-root-16"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Fab component rendering it should render all colors: Color primary Fab 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root makeStyles-root-10 MuiFab-primary makeStyles-primary-11"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Fab component rendering it should render all colors: Color secondary Fab 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root makeStyles-root-13 MuiFab-secondary makeStyles-secondary-15"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
</button>
`;

exports[`Fab component rendering it should render all sizes: Size large Fab 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root makeStyles-root-19 MuiFab-primary makeStyles-primary-20"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
</button>
`;

exports[`Fab component rendering it should render all sizes: Size medium Fab 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root makeStyles-root-22 MuiFab-sizeMedium MuiFab-primary makeStyles-primary-23"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Fab component rendering it should render all sizes: Size small Fab 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root makeStyles-root-25 MuiFab-sizeSmall MuiFab-primary makeStyles-primary-26"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
</button>
`;

exports[`Fab component rendering it should render all variants: Size extended Fab 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root makeStyles-root-31 MuiFab-extended MuiFab-primary makeStyles-primary-32"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
</button>
`;

exports[`Fab component rendering it should render all variants: Size round Fab 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root makeStyles-root-28 MuiFab-primary makeStyles-primary-29"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Fab component rendering it should render with Provider theme: Provider Theme Fab 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root makeStyles-root-4 MuiFab-primary makeStyles-primary-5"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Fab component rendering it should render with disabled truthy: Disabled Fab 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root makeStyles-root-7 Mui-disabled MuiFab-primary makeStyles-primary-8 Mui-disabled"
  disabled={true}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
</button>
`;

exports[`Fab component rendering it should render with no props: No Props Fab 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root makeStyles-root-1 MuiFab-primary makeStyles-primary-2"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
</button>
`;
